lintian (1.23.9) unstable; urgency=low

  * checks/conffiles:
    + [JvW] Warn on /var files being a conffile too (Closes: #293443)
  * checks/menus:
    + [FL] New check menu-file-in-usr-lib because /usr/lib/menu is
      deprecated
    + [FL] Also find menu files in /usr/share/menu (Closes: #314187)
    + [FL] Rename executable-in-usr-lib-menu to executable-menu-file
  * checks/menu-format:
    + [FL] Adapt to changes in collections/menu-files

  * collections/menu-files:
    + [FL] Also collect files from /usr/share/menu
  
 -- Frank Lichtenheld <djpig@debian.org>  Fri, 17 Jun 2005 02:17:52 +0200

lintian (1.23.8) unstable; urgency=low

  The "Hm, this is the team's one year anniversery of maintaining lintian"
  release[1], and still using the "temporary" subversion repository...

  Featuring Steve "R." Langasek in a guest appearance.

  [1] http://lists.debian.org/debian-lint-maint/2004/01/msg00014.html

  * checks/*.desc,doc/lintian.sgml:
    + [JvW] Stop bugging us for exceptions, mmkay, just install overrides.
      Hints like this should be in the general documentation anyway, not in
      per-tag descriptions. The general documentation will now only ask to
      contact us if in doubt
  * checks/changelog-file{,desc}:
    + [JvW] (new test) Bark on @toplevel email signatures in changelogs
    + [JvW] Display invalid debmake email address upon detection
  * checks/common_data.pm:
    + [CW] Add tclx8.4 to %known_tclxs.
  * checks/description:
    + [SRL] Do not generate warnings when a short description starts with an
      article; this is good grammar and should not be discouraged.
      (Closes: #290505)
    + [JvW] Drop description-synopsis-starts-with-a-capital-letter by popular
      demand (Closes: #288568)
  * checks/files{,.desc}:
    + [JvW] Warn only for hardlinks in /etc or amongst different directories
      (Closes: #288634)
    + [JvW] Only check for desktop files in GNOME's and KDE's obsolete places,