@@ -1,0 +1,5 @@
+usr/bin
+etc
+var/spool/lintian
+usr/share/lintian/overrides
+usr/share/lintian/info
