@@ -1,0 +1,6 @@
+doc/lintian.html
+doc/CREDITS
+doc/README
+doc/desc-files
+doc/lintian.sgml
+doc/lintian.txt
