@@ -1,5 +1,0 @@
-#!/bin/sh -e
-
-if [ "$1" = configure ] && command -v install-docs >/dev/null 2>&1; then
-  install-docs -i /usr/share/doc-base/lintian
-fi
